--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-  <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>{{ site.title }}</title>
-    <meta name="description" content="{{ site.description }}">
     
-    <link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/reveal.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/theme/solarized.css" id="theme">
-
-    <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/reveal/lib/css/zenburn.css">
-
-    <!--[if lt IE 9]>
-        <script src="{{ site.baseurl }}/reveal/lib/js/html5shiv.js"></script>
-    <![endif]-->
-
-  </head>
-  <body>
-
-    <div class="reveal">
-      
-      <div class="slides">
-
-	{{ content }}
+    <head>
 	
-      </div>
-      
-    </div>
-
-    <script src="{{ site.baseurl }}/reveal/lib/js/head.min.js"></script>
-    <script src="{{ site.baseurl }}/reveal/js/reveal.js"></script>
-    <script>
-      Reveal.initialize({
-          transition: 'default'
-      });
-      
-    </script>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>{{ site.title }}</title>
+	<meta name="description" content="{{ site.description }}">
+	
+	<link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/reveal.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/theme/solarized.css" id="theme">
+	
+	<!-- For syntax highlighting -->
+	<!-- <link rel="stylesheet" href="{{ site.baseurl }}/reveal/lib/css/zenburn.css"> -->
+	
+	<!--[if lt IE 9]>
+            <script src="{{ site.baseurl }}/reveal/lib/js/html5shiv.js"></script>
+	<![endif]-->
+	
+    </head>
     
-  </body>
-  
+    <body>
+	
+	<div class="reveal">
+      
+	    <div class="slides">
+
+		{{ content }}
+	
+	    </div>
+      
+	</div>
+
+	<script src="{{ site.baseurl }}/reveal/lib/js/head.min.js"></script>
+	<script src="{{ site.baseurl }}/reveal/js/reveal.js"></script>
+	<script>
+	 Reveal.initialize({
+	     width: 1920,
+	     height: 1200,
+	     margin: 0.2,
+	     transition: 'default'
+	 });
+	 
+	</script>
+	
+    </body>
+    
 </html>
