--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -20,6 +20,13 @@
             <script src="{{ site.baseurl }}/reveal/lib/js/html5shiv.js"></script>
 	<![endif]-->
 	
+	<style type="text/css">
+	 img + br + em {
+	     font-size: 0.6em !Important;
+	 }
+	</style>
+	     
+
     </head>
     
     <body>
@@ -41,7 +48,7 @@
 	     width: 1920,
 	     height: 1200,
 	     margin: 0.2,
-	     transition: 'default'
+	     transition: 'default',
 	 });
 	 
 	</script>
