drafted basic-git-lesson

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,9 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <style type="text/css">
-     img + em {
-	 font-size: 0.75em;
-	 align: "center";
+     img + br + em {
+	 font-size: 0.6em;
+	 text-align: right;
      }
     </style>
     
