--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="{{ site.description }}">
 	
 	<link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/reveal.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/theme/solarized.css" id="theme">
+	<link rel="stylesheet" href="{{ site.baseurl }}/reveal/css/theme/sky.css" id="theme">
 	
 	<!-- For syntax highlighting -->
 	<!-- <link rel="stylesheet" href="{{ site.baseurl }}/reveal/lib/css/zenburn.css"> -->
@@ -22,10 +22,19 @@
 	
 	<style type="text/css">
 	 img + br + em {
-	     font-size: 0.6em !Important;
+	     font-size: 0.5em !Important;
+	 }
+	 .reveal section p {
+	     margin-top: 2em;
+	     margin-bottom: 1em;
+	 }
+	 .reveal section div:nth-of-type(odd) pre {
+	     background-color: #EBECE4;
+	 }
+	 .reveal section div:nth-of-type(even) pre {
+	     background-color: #FFFFFF;
 	 }
 	</style>
-	     
 
     </head>
     
