--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,32 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <style type="text/css">
-     img + br + em {
+     p.captioned {
+	 text-align: center;
+     }
+     
+     .captioned em {
 	 font-size: 0.6em;
+     }
+     
+     .ToS {
 	 text-align: right;
+     }
+     
+     .input.highlighter-rouge pre {
+	 background-color: #EBECE4;
+     }
+
+     .input.highlighter-rouge code {
+	 background-color: transparent;
+     }
+
+     .output.highlighter-rouge pre {
+	 background-color: #ECECC7;
+     }
+
+     .output.highlighter-rouge code {
+	 background-color: transparent;
      }
     </style>
     
