--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -28,10 +28,10 @@
 	     margin-top: 2em;
 	     margin-bottom: 1em;
 	 }
-	 .reveal section div:nth-of-type(odd) pre {
+	 .input pre {
 	     background-color: #EBECE4;
 	 }
-	 .reveal section div:nth-of-type(even) pre {
+	 .output pre {
 	     background-color: #FFFFFF;
 	 }
 	</style>
