--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,28 @@
      .output.highlighter-rouge code {
 	 background-color: transparent;
      }
+
+     .text-document.highlighter-rouge pre {
+	 background-color: #000000;
+     	 border-radius: 0px 0px 5px 5px;
+     }
+     
+     .text-document.highlighter-rouge code {
+	 background-color: transparent;
+	 color: #FFFFFF;
+     }
+     
+     div.text-document::before {
+	 content: attr(title);
+	 font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+	 font-size: 14px;
+	 color: #000000;
+	 background: #C0C0C0;
+	 padding:8px 15px;
+	 border-radius:5px 5px 0px 0px;
+	 border:1px solid #e5e5e5;
+	 display: block;
+     }     
     </style>
     
 </head>
