--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -28,12 +28,41 @@
 	     margin-top: 2em;
 	     margin-bottom: 1em;
 	 }
+	 .reveal .slides section.right-third {
+	     width: 50%;
+	     margin-left: 85vw;
+	 }
 	 .input pre {
 	     background-color: #EBECE4;
 	 }
 	 .output pre {
 	     background-color: #FFFFFF;
 	 }
+	 .text-document.highlighter-rouge pre {
+	     background-color: #000000;
+	     margin: 2px auto;
+	     width: 100%;
+     	     border-radius: 0px 0px 5px 5px;
+	 }
+	 
+	 .text-document.highlighter-rouge code {
+	     background-color: transparent;
+	     color: #FFFFFF;
+	 }
+	 
+	 div.text-document::before {
+	     content: attr(title);
+	     text-align: left;
+	     font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+	     font-size: 14px;
+	     color: #000000;
+	     background: #C0C0C0;
+	     padding: 8px 15px;
+	     border-radius: 5px 5px 0px 0px;
+	     border: 1px solid #C0C0C0;
+	     display: block;
+	 }     
+
 	</style>
 
     </head>
