--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <link rel="stylesheet" href="{{ site.styleurl }}/css/lesson.css">
+    <link rel="stylesheet" href="{{ site.styleurl }}{{ page.style }}">
 
     <style type="text/css">
 
