--- a/_layouts/slideshow.html
+++ b/_layouts/slideshow.html
@@ -40,9 +40,12 @@
 	 Reveal.initialize({
 
 	     // Size
-	     width: 1300,
-	     height: 1200,
-	     margin: 0.15,
+	     width: 1600,
+	     height: 900,
+	     margin: 0.1,
+
+	     // Controls
+	     controls: false,
 
 	     // Transition
 	     transition: 'default',
