--- a/docs/css/slideshow.css
+++ b/docs/css/slideshow.css
@@ -43,6 +43,11 @@ img + br + em {
     margin-left: 65vw;
 }
 
+.reveal .slides h2.right-third {
+    color: #FFFFFF;
+    font-weight: 500;
+}
+
 .text-document pre, .input pre {
     margin: 2px auto;
 }
